test/types/locale/bradc/changeLocaleID.good
changeLocaleID.chpl:2: error: illegal lvalue in assignment
