test/types/locale/bradc/changeLocaleID.chpl
writeln("Locales(0) = ", Locales(0));
Locales(0).id = -999;
writeln("Locales(0) = ", Locales(0));
